--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"redis": "*",
 		"socket.io": "^3.1.1",
 		"time-ago": "*",
-		"turtlecoin-multi-hashing": "git+https://github.com/turtlecoin/turtlecoin-crypto.git",
+		"turtlecoin-multi-hashing": "https://github.com/cbunting99/turtlecoin-multi-hashing.git",
 		"utf-8-validate": "*"
 	},
 	"engines": {
